# lfqa-weighted-eval

./: README.md  pyproject.toml
data/: answers.jsonl  assignments.jsonl  gpt4_ratings.jsonl  gpt4_ratings_3epoch_mean.jsonl  llama_ratings.jsonl  mturk_ratings.jsonl  questions.jsonl  ratings.jsonl  references.jsonl
src/: inspect_data.ipynb
src/utils/: mylogger.py
