[project]
name = "lfqa-weighted-eval"
version = "0.1.0"
description = "LFQA Weighted Evaluation"
authors = ["gokamoda <gokamoda@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch ==2.1.2+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch ==2.1.2; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "openai>=0.27.0",
    "polars>=1.17.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-learn==1.5.2",
    "huggingface-hub>=0.24.5",
    "numpy>=1.26.0, <2.0.0",
    "transformers>=4.44.2",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.3",
    "evaluate>=0.4.3",
    "rouge_score>=0.1.2",
    "nltk>=3.9.1",
    "absl-py==1.4.0",
    "krippendorff==0.6.1",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu121/torch",
    "https://download.pytorch.org/whl/cu121/torchvision",
]
dev-dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.7.2",
]



[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",  # Zip-without-explicit-strict
    "E501",  # Line too long, handled by black
    "F401",  # module imported but unused
    "F403",  # Unable to detect undefined names
    "N812",  # Lowercase imported as non-lowercase
    "N999",  # Invalid module name
    "UP035",  # Checks for uses of deprecated imports based on the minimum supported Python version.
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements in function
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true  # Settings for Python 3.8 compatibility

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
